--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,30 +1,33 @@
 <html>
 	<head>
 	<style>
-		body { background-color: powderblue;}
+		body { background-color: #99ccff;}
 		h1 { color: blue; font-family: verdana;}
 		p { color: green;}
 		ul {
 			list-style-type: none;
-			margin: 10;
-			padding: 10;
-			width: 200px;
-			background-color: powderblue;
+			margin: 5;
+			padding: 5;
+			width: 150px;
+			background-color: #99ccff;
 		}
 		li a {
 			display: block;
-			color: white;
+			color: black;
 			padding: 8px 16px;
 			text-decoration: none;
 			font-family: verdana;
 		}
 		li a:hover {
-			background-color: purple;
+			background-color: #a6a6a6;
 			color: white;
 		}
 	</style>
 	<ul>
 		<li><a href="/home">Home</a></li>
+		<li><a href="/about">About</a></li>
+
+		<h1 style="padding: 0px 200px">{{ title }}</h1>
 
 	{% block head_content %}{% endblock %}
 
