--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,7 +2,7 @@
 	<head>
 	<style>
 		body { background-color: #99ccff;}
-		h1 { color: blue; font-family: verdana;}
+		h1 { display: flex; color: blue; font-family: verdana;}
 		p { color: green;}
 		ul {
 			list-style-type: none;
@@ -18,15 +18,20 @@
 			text-decoration: none;
 			font-family: verdana;
 		}
-		li a:hover {
+		li a.active{
+			background-color: #004d99;
+			color: white;
+		}
+		li a:hover:not(.active) { 
 			background-color: #a6a6a6;
 			color: white;
 		}
+		
 	</style>
 	<ul>
 		<li><a href="/home">Home</a></li>
 		<li><a href="/about">About</a></li>
-
+	</ul>
 		<h1 style="padding: 0px 200px">{{ title }}</h1>
 
 	{% block head_content %}{% endblock %}
