--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 	<style>
@@ -6,8 +7,8 @@
 		p { color: green;}
 		ul {
 			list-style-type: none;
-			margin: 5;
-			padding: 5;
+			margin: 5px;
+			padding: 5px;
 			width: 150px;
 			background-color: #99ccff;
 		}
@@ -26,13 +27,20 @@
 			background-color: #a6a6a6;
 			color: white;
 		}
+		table, th, td {
+			border: 1px solid black;
+			border-spacing: 5px;
+			padding: 5px;
+			font-family: verdana;
+		}
 		
 	</style>
-	<ul>
+	<ul style="margin-left: 0px;">
 		<li><a href="/home">Home</a></li>
 		<li><a href="/about">About</a></li>
+		<li><a href="/characters">Fighters</a></li>
 	</ul>
-		<h1 style="padding: 0px 200px">{{ title }}</h1>
+		<h1 style="margin-left: 175px;margin-top: -100px;">{{ title }}</h1>
 
 	{% block head_content %}{% endblock %}
 
