--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -39,6 +39,8 @@
 		<li><a href="/home">Home</a></li>
 		<li><a href="/about">About</a></li>
 		<li><a href="/characters">Fighters</a></li>
+		<li><a href="/registration">Register</a></li>
+
 	</ul>
 		<h1 style="margin-left: 175px;margin-top: -100px;">{{ title }}</h1>
 
